inital migrated to mysql

--- a/ModularEfCore/ModularEfCore.Example.Web/appsettings.json
+++ b/ModularEfCore/ModularEfCore.Example.Web/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\MSSQLSERVER2017;Database=SampleDB;Trusted_Connection=True;"
+    "DefaultConnection": "server=localhost;port=3306;database=efcore;uid=root;password=u^f!t5G25Sz4$"
   }
 }
