--- a/ModularEfCore/ModularEfCore.Migrations/ModularEfCore.Migrations.csproj
+++ b/ModularEfCore/ModularEfCore.Migrations/ModularEfCore.Migrations.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <Compile Remove="Migrations\20180919185408_Initia.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
   </ItemGroup>
 
   <ItemGroup>
